Testをフォルダに整理，block用とgenerator用のフォルダ作成

--- a/index.html
+++ b/index.html
@@ -344,8 +344,8 @@
   </block>
 </xml>
 
-<script src="play_block.js"></script>
-<script src="play.js"></script>
+<script src="blocks/play_block.js"></script>
+<script src="generators/play.js"></script>
 <script src="script.js"></script>
 
 </body>
