playブロックはコードが反映するようになった．randomはまだだめ

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
     <script src="blocks/js/play_block2.js"></script>
     <script src="generators/play2.js"></script>
     <script src="blocks/js/random_block.js"></script>
-    <script src="generators/random2.js"></script>
+    <script src="generators/random.js"></script>
     <script src="blocks/js/custom_test_block.js"></script>
     <script src="generators/custom_test.js"></script>
 
