--- a/index.html
+++ b/index.html
@@ -23,17 +23,29 @@
     <xml id="toolbox" style="display: none">
       <category name="Default">
         <block type="controls_if"></block>
-        <block type="controls_repeat_ext"></block>
+        <!-- <block type="controls_repeat_ext"></block> -->
         <block type="logic_compare"></block>
         <block type="math_number"></block>
         <block type="math_arithmetic"></block>
         <block type="text"></block>
         <block type="text_print"></block>
       </category>
-      <category name="Music">
+
+      <category name="Music" colour="0">
         <block type="play"></block>
         <block type="random"></block>
-        <block type="custom_test"></block>
+        <!-- <block type="custom_test"></block> -->
+      </category>
+
+      <category name="Loops" colour="120">
+        <block type="controls_repeat_ext">
+          <value name="TIMES">
+            <shadow type="math_number">
+              <field name="NUM">10</field>
+            </shadow>
+          </value>
+        </block>
+        <block type="controls_whileUntil"></block>
       </category>
     </xml>
 
