--- a/index.html
+++ b/index.html
@@ -47,6 +47,22 @@
         </block>
         <block type="controls_whileUntil"></block>
       </category>
+
+      <category name="plobablistic" colour="230">
+        <block type="math_random_int">
+          <value name="FROM">
+            <shadow type="math_number">
+              <field name="NUM">1</field>
+            </shadow>
+          </value>
+          <value name="TO">
+            <shadow type="math_number">
+              <field name="NUM">100</field>
+            </shadow>
+          </value>
+        </block>
+        <block type="math_random_float"></block>
+      </category>
     </xml>
 
     <!-- <xml id="toolbox" style="display: none">
