--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
         </block>
         <block type="math_random_float"></block>
       </category>
+
+      <category name="Variables" colour="330" custom="VARIABLE"></category>
     </xml>
 
     <!-- <xml id="toolbox" style="display: none">
@@ -389,3 +391,4 @@
   </body>
 
 </html>
+
