--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@
       </category>
 
       <category name="Variables" colour="330" custom="VARIABLE"></category>
+
+      <category name="Lists" colour="260">
+        <block type="lists_create_with">
+          <mutation items="0"></mutation>
+        </block>
+        <block type="lists_create_with"></block>
+        <block type="lists_length"></block>
+      </category>
     </xml>
 
     <!-- <xml id="toolbox" style="display: none">
