gaussブロックを追加

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       <category name="Music" colour="0">
         <block type="play"></block>
         <block type="random"></block>
+        <block type="gauss"></block>
         <!-- <block type="custom_test"></block> -->
       </category>
 
@@ -387,10 +388,15 @@
 
     <script src="blocks/js/play_block2.js"></script>
     <script src="generators/play2.js"></script>
+
     <script src="blocks/js/random_block.js"></script>
     <script src="generators/random.js"></script>
+
     <script src="blocks/js/custom_test_block.js"></script>
     <script src="generators/custom_test.js"></script>
+
+    <script src="blocks/js/gauss_block2.js"></script>
+    <script src="generators/gauss2.js"></script>
 
     <script src="script.js"></script>
 
