weibulブロックを追加

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <block type="play"></block>
         <block type="random"></block>
         <block type="gauss"></block>
+        <block type="weibul"></block>
         <!-- <block type="custom_test"></block> -->
       </category>
 
@@ -397,6 +398,9 @@
 
     <script src="blocks/js/gauss_block2.js"></script>
     <script src="generators/gauss2.js"></script>
+
+    <script src="blocks/js/weibul_block.js"></script>
+    <script src="generators/weibul.js"></script>
 
     <script src="script.js"></script>
 
