randwalkブロックの追加

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <block type="random"></block>
         <block type="gauss"></block>
         <block type="weibul"></block>
+        <block type="randwalk"></block>
         <!-- <block type="custom_test"></block> -->
       </category>
 
@@ -401,6 +402,9 @@
 
     <script src="blocks/js/weibul_block.js"></script>
     <script src="generators/weibul.js"></script>
+
+    <script src="blocks/js/randwalk_block.js"></script>
+    <script src="generators/randwalk.js"></script>
 
     <script src="script.js"></script>
 
