--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <block type="controls_whileUntil"></block>
       </category>
 
-      <category name="plobablistic" colour="230">
+      <!-- <category name="plobablistic" colour="230">
         <block type="math_random_int">
           <value name="FROM">
             <shadow type="math_number">
@@ -98,7 +98,7 @@
           </value>
         </block>
         <block type="math_random_float"></block>
-      </category>
+      </category> -->
 
       <category name="Variables" colour="330" custom="VARIABLE"></category>
 
