試験的に自作loopブロックのファイルを配置，入れ込みはまだ

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
           </value>
         </block>
         <block type="controls_whileUntil"></block>
+        <block type="loop"></block>
       </category>
 
       <!-- <category name="plobablistic" colour="230">
@@ -438,6 +439,8 @@
 
     <script src="blocks/js/randwalk_block.js"></script>
     <script src="generators/randwalk.js"></script>
+
+    <script src="generators/loop.js"></script>
 
     <script src="script.js"></script>
 
