正規表現を使って標準のfor文をloop文に書き換え

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           </value>
         </block>
         <block type="controls_whileUntil"></block>
-        <block type="loop"></block>
+        <!-- <block type="loop"></block> -->
       </category>
 
       <!-- <category name="plobablistic" colour="230">
@@ -440,7 +440,9 @@
     <script src="blocks/js/randwalk_block.js"></script>
     <script src="generators/randwalk.js"></script>
 
-    <script src="generators/loop.js"></script>
+    <!-- ループは標準のを使って正規表現で書き換える -->
+    <!-- <script src="blocks/js/loop_block.js"></script>
+    <script src="generators/loop.js"></script> -->
 
     <script src="script.js"></script>
 
