weibulブロックの引数をinlineに変更

--- a/index.html
+++ b/index.html
@@ -434,8 +434,8 @@
     <script src="blocks/js/gauss_block2.js"></script>
     <script src="generators/gauss2.js"></script>
 
-    <script src="blocks/js/weibul_block.js"></script>
-    <script src="generators/weibul.js"></script>
+    <script src="blocks/js/weibul_block2.js"></script>
+    <script src="generators/weibul2.js"></script>
 
     <script src="blocks/js/randwalk_block.js"></script>
     <script src="generators/randwalk.js"></script>
