print関数と文字列は使わないので消去

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         <block type="logic_compare"></block>
         <block type="math_number"></block>
         <block type="math_arithmetic"></block>
-        <block type="text"></block>
-        <block type="text_print"></block>
+        <!-- <block type="text"></block>
+        <block type="text_print"></block> -->
       </category>
 
       <category name="Music" colour="0">
