markdownのCDN入れたけど変化なし，h2の見出しのデザインをCSSで設定

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       <div class="scroll-container" id="markdown_preview"> <!-- ここに出力される --> </div>
     </div>
     <script src="Instruction/inst_markdown.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/13.0.2/markdown-it.min.js" integrity="sha512-ohlWmsCxOu0bph1om5eDL0jm/83eH09fvqLDhiEdiqfDeJbEvz4FSbeY0gLJSVJwQAp0laRhTXbUQG+ZUuifUQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 
     <xml id="toolbox" style="display: none">
