--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       </div>
       <div class="onetime_popup_content">
         <p>Choose Language:</p>
-        <button onclick="setLanguage('ja'); closePopup();">日本語</button>
-        <button onclick="setLanguage('en'); closePopup();">English</button>
+        <button class="languageButton" onclick="setLanguage('ja'); closePopup();">日本語</button>
+        <button class="languageButton" onclick="setLanguage('en'); closePopup();">English</button>
       </div>
     </div>
   </div>
@@ -40,11 +40,6 @@
         body.classList.remove('open_popup');
       }
 
-      // 背景をクリックしたらポップアップを閉じる
-      languagePopup.addEventListener('click', function () {
-        closePopup();
-      });
-
       // ポップアップ内のクリックイベント伝播を防ぐ
       languagePopup.querySelector('.onetime_popup').addEventListener('click', function (e) {
         e.stopPropagation();
@@ -55,12 +50,6 @@
         closePopup();
       });
     }, false);
-
-    function setLanguage(lang) {
-      // 言語切り替えの処理を追加
-      // ここで必要なら言語に応じた処理を実行する
-      console.log('Selected language:', lang);
-    }
   </script>
   
   
