--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/blockly@1.0.0/msg/js/en.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/blockly@1.0.0/javascript_compressed.min.js"></script>
     <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   </head>
 
   <body>
@@ -31,24 +32,20 @@
     window.addEventListener('load', function () {
       const body = document.querySelector('body');
       const languagePopup = document.getElementById('languagePopup');
-      const popupCloseButton = document.getElementById('popupCloseButton');
+      // const popupCloseButton = document.getElementById('popupCloseButton');
 
       body.classList.add('open_popup');
-
-      // ポップアップを閉じる処理
-      function closePopup() {
-        body.classList.remove('open_popup');
-      }
 
       // ポップアップ内のクリックイベント伝播を防ぐ
       languagePopup.querySelector('.onetime_popup').addEventListener('click', function (e) {
         e.stopPropagation();
+        console.log('Popup clicked');
       });
 
       // 閉じるボタンをクリックしたらポップアップを閉じる
-      popupCloseButton.addEventListener('click', function () {
-        closePopup();
-      });
+      // popupCloseButton.addEventListener('click', function () {
+      //   closePopup();
+      // });
     }, false);
   </script>
   
