ポップアップの表示を調整完了

--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
     <div class="onetime_popup">
       <div class="onetime_popup_title">
         <span class="onetime_popup_title_close" id="popupCloseButton"></span>
-        <span>言語選択</span>
+        <span>言語選択 (Chooes Language)</span>
       </div>
       <div class="onetime_popup_content">
-        <p>Choose Language:</p>
         <button class="languageButton" onclick="setLanguage('ja'); closePopup();">日本語</button>
         <button class="languageButton" onclick="setLanguage('en'); closePopup();">English</button>
       </div>
