ブロックと画像のパス整理

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <!-- MIDIノートナンバーの画像 -->
     <div class="flex-container">
-      <img src="figures/NOTE_number.jpeg" alt="MIDI ノートナンバー">
+      <img src="Instruction/figures/NOTE_number.jpeg" alt="MIDI ノートナンバー">
       <div class="scroll-container" id="markdown_preview"> <!-- ここに出力される --> </div>
     </div>
     <script src="Instruction/inst_markdown.js"></script>
