音楽関数の日本語対応完了，またカスタムブロックとランダムブロックを削除

--- a/index.html
+++ b/index.html
@@ -82,11 +82,10 @@
 
       <category name="Music" colour="0">
         <block type="play"></block>
-        <block type="random"></block>
+        <!-- <block type="random"></block> -->
         <block type="gauss"></block>
         <block type="weibul"></block>
         <block type="randwalk"></block>
-        <!-- <block type="custom_test"></block> -->
       </category>
 
       <category name="Loops" colour="120">
