Chooseのスペルミス

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="onetime_popup">
       <div class="onetime_popup_title">
         <span class="onetime_popup_title_close" id="popupCloseButton"></span>
-        <span>言語選択 (Chooes Language)</span>
+        <span>言語選択 (Choose Language)</span>
       </div>
       <div class="onetime_popup_content">
         <button class="languageButton" onclick="setLanguage('ja'); closePopup();">日本語</button>
