キャッシュを保持しない設定を一応追記(今はコメントアウト)，ポップアップのタイトルサイズ修正

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/blockly@1.0.0/javascript_compressed.min.js"></script>
     <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <!-- <meta http-equiv="Cache-Control" content="no-store"> -->
   </head>
 
   <body>
@@ -112,7 +113,7 @@
       </category>
     </xml>
 
-    <xml id="startBlocks" style="display: none">
+    <!-- <xml id="startBlocks" style="display: none">
       <block type="text_print" id="0@)u5QVs/@*zX^XXw%Lp" x="35" y="21">
         <value name="TEXT">
           <shadow type="text" id="=[)BkyD!BK*AF%PcBi9;">
@@ -120,7 +121,7 @@
           </shadow>
         </value>
       </block>
-    </xml>
+    </xml> -->
 
 <!-- ------------------------------------------------------------------------------------------------------------------------------ -->
 
