コード反映欄の枠が何故か消えてしまっていたので明示的に追加

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div id="content" style="display:flex;">
       <div>
         <!-- コード反映欄 -->
-        <div id="code" style="width: 800px; padding: 5px;"><pre/></div>
+        <div id="code" style="width: 800px; padding: 5px; border: 2px solid black;"><pre/></div>
         <button onclick="runCode();">Run</button>
       </div>
       <!-- ブロック配置欄 -->
