loopブロックの説明追加

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <!-- ------------------------------------------------------------------------------------------------------------------------------ -->
 
   <xml id="toolbox" style="display: none">
-    <category name="Common">
+    <category name="General">
       <block type="controls_if"></block>
       <!-- <block type="controls_repeat_ext"></block> -->
       <block type="logic_compare"></block>
