外ハメ形式のplayブロックを追加

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
     </category>
 
     <category name="Music" colour="0">
+      <block type="play1"></block>
       <block type="play"></block>
       <!-- <block type="random"></block> -->
       <block type="gauss"></block>
