gaussの外ハメ形式ブロックを追加

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
       <block type="play1"></block>
       <block type="play"></block>
       <!-- <block type="random"></block> -->
+      <block type="gauss1"></block>
       <block type="gauss"></block>
       <block type="weibul"></block>
       <block type="randwalk"></block>
