不要なJSON削除，weibulの外ハメ形式追加

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
       <!-- <block type="random"></block> -->
       <block type="gauss1"></block>
       <block type="gauss"></block>
+      <block type="weibul1"></block>
       <block type="weibul"></block>
       <block type="randwalk"></block>
     </category>
