randwalkの外ハメ形式と訂正関数の追加

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
       <block type="gauss"></block>
       <block type="weibul1"></block>
       <block type="weibul"></block>
+      <block type="randwalk1"></block>
       <block type="randwalk"></block>
     </category>
 
