ボタンにid追加，ファイルに書き込む不要な関数を削除

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div>
       <!-- コード反映欄 -->
       <div id="code" style="width: 750px; padding: 5px; border: 2px solid black;"><pre/></div>
-      <button onclick="runCode();">Run</button> <button onclick="copyCode();">Copy</button>
+      <button id="Run" onclick="runCode();">Run</button> <button id="Copy" onclick="copyCode();">Copy</button>
     </div>
     <!-- ブロック配置欄 -->
     <div id="blocklyDiv" style="height: 650px; width: 1150px; padding: 5px"></div>
